<resources>
    <string name="app_name">Combine Brasil</string>
    <string name="facebook_app_id">424941101232356</string>
    <string name="fb_login_protocol_scheme">fb424941101232356</string>
    <string name="User">Usuário</string>
    <string name="Password">Senha</string>
    <string name="pswd_now">Senha atual</string>
    <string name="pswd_new">Nova Senha</string>
    <string name="pswd_comfirm">Confirme a Senha</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="Entrar">Entrar</string>
    <string name="entrar_facebook">Entrar com o Facebook</string>
    <string name="nao_inscrito">Não é inscrito?</string>
    <string name="registre_se">Registre-se agora!</string>
    <string name="register">Cadastrar</string>
    <string name="menu">Menu</string>
    <string name="register_facebook">Cadastrar com facebook</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="logando">Entrando na sua conta</string>
    <string name="recording">Cadastrando usuário</string>
    <string name="home">Home</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="cadastrar_atleta">Cadastrar Atleta</string>
    <string name="info_seletiva">Info. Seletiva</string>
    <string name="update">Atualizar</string>
    <string name="help">Ajuda</string>
    <string name="exit_selective">Fechar Seletiva</string>
    <string name="entre_seletiva">Entrar em uma seletiva</string>
    <string name="codigo">Código</string>
    <string name="enter_selective">Para ser avaliador de uma seletiva, digite o código informado ao adminstrador</string>
    <string name="confirm">Confirmar</string>
    <string name="chosse_time">escolher hora</string>
    <string name="time_selective">Escolha a hora da seletiva</string>
    <string name="filter_by">Filtrar por</string>
    <string name="date_init">Data Início</string>
    <string name="date_end">Data Fim</string>
    <string name="create_selective">Criar seletiva</string>
    <string name="create_team">Criar Time</string>
    <string name="info_team">Informações do novo time</string>
    <string name="team">Time</string>
    <string name="participation">Participação como:</string>
    <string name="selecionar_time">Selecionar Time</string>
    <string name="selecionar_testes">Selecionar Testes</string>
    <string name="add_time">Adicionar novo time</string>
    <string name="proximo_passo">Próximo Passo</string>
    <string name="update_teams">Atualizando equipes</string>
    <string name="update_tests">Atualizando testes</string>
    <string name="try_again">Tentar novamente</string>
    <string name="local_selective">Local da Seletiva</string>
    <string name="info_selective">Informações da seletiva</string>
    <string name="verify_selective">Verificando seletiva</string>
    <string name="revisao">Revisão</string>
    <string name="detalhes">Detalhes</string>
    <string name="observacoes">Observações</string>
    <string name="finalizar">Finalizar</string>
    <string name="aceitar_termos_de_uso">Aceitar Termos de Uso</string>
    <string name="confirmacao">Confirmação</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="aceito">Aceito</string>
    <string name="create_selective_success">Seletiva criada</string>
    <string name="voltar_ao_menu">Voltar ao Menu</string>
    <string name="go_to_selective">Ir para a seletiva</string>
    <string name="title_tests">Os testes</string>
    <string name="number_picker_formatter">0</string>
    <string name="text_tests_default">Ao escolher nossos testes, existem alguns testes padrões, que já estarão selecionados. Com esses testes padrões, conseguimos extrair o máximo de análises e certezas ao informar as posições corentes dos atletas. Para realizar a seletiva do seu, você poderá customizar os testes, porém certifique-se de que o testes selecionados seguem o modelo homolodado Combine Brasil Seletivas.</string>
    <string name="address_team">Endereço do time</string>
    <string name="required">Campo obrigatório</string>
    <string name="director">Nome do representante</string>
    <string name="cortar">Cortar</string>
    <string name="historic">Histórico</string>
    <string name="results_tests">Resultados por Testes</string>
    <string name="positions_player">Posições para o atleta</string>
    <string name="test_required">Testes Obrigatórios</string>
    <string name="test_recommended">Testes Recomendados</string>
    <string name="test_additional">Testes Adicionais</string>
    <string name="inscrever">Inscreva-se e melhore suas seletivas</string>
    <string name="testes">Testes</string>
    <string name="result">Resultado</string>
    <string name="first_result">Primeiro Resultado</string>
    <string name="second_result">Segundo Resultado</string>
    <string name="result_value">Insira o quantidade de repetições feitas</string>
    <string name="first">Primeiro</string>
    <string name="second">Segundo</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar_dados">Salvar resultados</string>
    <string name="inconclusive">Dado Incoclusivo</string>
    <string name="nome_opcional">Nome (Opcional)</string>
    <string name="code_selective">Código da selectiva</string>
    <string name="code_athlete">Código do atleta</string>
    <string name="message_create_selective">Parabéns, sua seletiva foi criada com sucesso. Agora para que ela role, nós aqui do Combine Brasil, iremos analisa-lá e autoriza-lá. Se precisarmos de alguma informação faltando, fica esperto que a entraremos em contato, mas se tudo estiver certinho, já era, vamos lá descobrir o melhor do atleta!!!</string>
    <string name="email_contact">E-mail para contato</string>
    <string name="city">Cidade</string>
    <string name="neighborhood">Bairro</string>
    <string name="street">Rua</string>
    <string name="state">Estado</string>
    <string name="cpf">CPF</string>
    <string name="address_add">Endereço (Opcional)</string>
    <string name="address">Endereço </string>
    <string name="phone">Telfone ex:(xx)xxxxx-xxxx</string>
    <string name="position">Posição Desejável</string>
    <string name="nascimento">Data de Nascimento</string>
    <string name="date_selective">Data da Seletiva</string>
    <string name="message_social_link">Para ficarmos sempre atualizados, queremos algum meio em mídia social do time (facebook, instagram, site, etc.)</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="tests">Testes</string>
    <string name="players">Jogadores</string>
    <string name="message">Mensagem</string>
    <string name="qualification">Qualificação</string>
    <string name="wingspan">Envergadura</string>
    <string name="ok">Ok</string>
    <string name="ready">Pronto</string>
    <string name="search">Buscar</string>
    <string name="cancel">Cancelar</string>
    <string name="choose_date">Escolher outra data</string>
    <string name="update_ok">Tudo atualizado</string>
    <string name="back_to_test">Voltar para o teste</string>
    <string name="go_to_sync">Sincronizar teste</string>
    <string name="close">Fechar</string>
    <string name="edit_athlete">Editar atleta</string>
    <string name="value_error">Valor inválido</string>
    <string name="open_terms">O atleta deve aceitar o termos de serviço</string>
    <string name="terms_title">TERMO DE RESPONSABILIDADE, CONDIÇOES FÍSICAS E USO DE IMAGEM</string>
    <string name="save_Athletes">Salvar atletas</string>
    <string name="alter_timer">Alterar tempo</string>
    <string name="configure_timer">Altere o tempo do teste como desejar.</string>
    <string name="minute">00</string>
    <string name="save_test">Salvando teste</string>
    <string name="updating">Atualizando</string>
    <string name="admin_selective">Criador da Seletiva</string>
    <string name="selective_pay">Cobrar Inscrição?</string>
    <string name="selective_price">Preço da inscrição R$</string>
    <string name="your_code">Código da seletiva</string>
    <string name="ranking_selective">Ranking da Seletiva</string>
    <string name="ranking_by_tests">Ranking por Testes</string>
    <string name="ranking_by_positions">Ranking por Posições</string>
    <string name="list_geral">Ver lista geral</string>
    <string name="change_pswd">Trocar senha</string>
    <string name="shared_code">Parabéns, sua seletiva foi criada com sucesso.
Agora, você como um bom administrador, deve recrutar os avaliadores da seletiva, passando o código para que eles possam logar futuramente na sua seletiva.  Toque no código e compartilhe com os avaliadores</string>
    <string name="carregando_testes">Os testes estão sendo carregados</string>
    <string name="bem_vindo">Bem vindo ao Combine Brasil</string>
    <string name="update_selective">Atualizando seletivas...</string>
    <string name="search_historic">Aguarde, buscando seu histórico...</string>
    <string name="sync_now">Os testes estão sendo sincronizados</string>
    <string name="erro_dados_invalidos">Dados Inválidos</string>
    <string name="add_account">Criando atleta</string>
    <string name="qualification_message">Qualifique a atuação do atleta no teste.</string>
    <string name="wingspan_message">Nos testes de salto vertical, é necessário a envergadura do atleta,
        que consiste na altura entre os pés à mão do atleta acima da cabeça, com o seu braço totalmente esticado, como no exemplo abaixo: </string>
    <string name="rating">Rendimento do atleta no exercício</string>
    <string name="text_add_athlete">Para cadastrar um atleta, certifique-se que o atleta já fez o primeiro cadastro com o administrador. Após isso, informe o código de cadastro (código único que o administrador tem), e também o código do atleta, no qual o mesmo foi cadastrado pelo administrador, e informado após o cadastrado. Você também pode colocar o nome para visualizar mais facilmente na hora em que o atleta for realizar seus testes.</string>
    <string name="not_find">
                Ops... Não foi encontrado nenhum resultado para a busca. Talvez o atleta ainda não foi atualizado em seu celular.
    </string>
    <string name="search_null">Ops... Não foi encontrado nenhum resutltado para a busca.</string>
    <string name="error_digit">Verifique se não há erro de digitação</string>
    <string name="dicas">Pesquise por nome da seletiva ou do time.</string>
    <string name="no_connection">Ops... &lt;br /&gt;Aparentemente seu aparelho está sem conexão com a internet. &lt;br /&gt;Tente se conectar novamente. </string>
    <string name="click_update">Clique na tela para atualizar. </string>
    <string name="text_sync_athlete">Você cadastrou alguns atletas na seletiva, porém você estava sem conexão com a internet, e por esse motivo, os atletas não foram salvos.</string>
    <string name="order_by">Ordenar por</string>
    <string name="name">Nome</string>
    <string name="name_title">Nome da Seletiva</string>
    <string name="price_selective">Preço da seletiva</string>
    <string name="notes">Observações</string>
    <string name="cep">CEP</string>
    <string name="number">Número</string>
    <string name="complement">Complemento</string>
    <string name="social_link">Mídia Social</string>
    <string name="code">Código</string>
    <string name="date">Data</string>
    <string name="team_name">Nome do Time</string>
    <string name="modality">Modalidade</string>
    <string name="create">Criar Atleta</string>
    <string name="sync">Sincronizar</string>
    <string name="tests_athletes">Testes e atletas</string>
    <string name="about">Sobre o Combine</string>
    <string name="test_done">Teste concluído!</string>
    <string name="done">Feito</string>
    <string name="exit">Sair</string>
    <string name="filter">Filtros</string>
</resources>