<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account_athlete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.john.combinebrasil.CreateAccountAthlete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <include layout="@layout/toolbar_default" android:id="@+id/include"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:layout_margin="15sp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/edit_name_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:paddingLeft="10sp"
                        android:paddingBottom="10sp"
                        android:paddingTop="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/greyDark"
                        android:textSize="16sp"
                        android:layout_marginBottom="15sp"
                        android:background="@drawable/background_edit_border"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        />
                    <EditText
                    android:id="@+id/edit_cpf_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:paddingLeft="10sp"
                    android:paddingBottom="10sp"
                    android:paddingTop="10sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyDark"
                    android:textSize="16sp"
                    android:layout_marginBottom="15sp"
                    android:inputType="number"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/background_edit_border"
                    />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/edit_address_add"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:hint="@string/address"
                            android:paddingLeft="10sp"
                            android:paddingBottom="10sp"
                            android:paddingTop="10sp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/greyDark"
                            android:textSize="16sp"
                            android:layout_marginRight="10sp"
                            android:layout_marginBottom="15sp"
                            android:singleLine="true"
                            android:imeOptions="actionNext"
                            android:background="@drawable/background_edit_border"
                            />

                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                            android:id="@+id/spinner_positions_add"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:hint="@string/position"
                            android:paddingLeft="10sp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/greyDark"
                            android:textSize="16sp"
                            android:layout_marginBottom="15sp"
                            android:background="@drawable/background_edit_border"
                            />

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nascimento"
                        android:textSize="15sp"
                        android:textColor="@color/greyDark"
                        android:paddingBottom="5sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                           android:id="@+id/spinner_day_birthday_add"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="0.2"
                           android:hint="@string/dia"
                           android:paddingLeft="10sp"
                           android:textColor="@color/black"
                           android:textColorHint="@color/greyDark"
                           android:textSize="16sp"
                           android:layout_marginBottom="15sp"
                           android:background="@drawable/background_edit_border"
                           />

                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                            android:id="@+id/spinner_month_birthday_add"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:hint="@string/mes"
                            android:paddingLeft="10sp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/greyDark"
                            android:textSize="16sp"
                            android:layout_marginBottom="15sp"
                            android:layout_marginLeft="10sp"
                            android:layout_marginRight="10sp"
                            android:background="@drawable/background_edit_border"
                            />
                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                            android:id="@+id/spinner_year_birthday_add"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:hint="@string/ano"
                            android:paddingLeft="10sp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/greyDark"
                            android:textSize="16sp"
                            android:layout_marginBottom="15sp"
                            android:inputType="number"
                            android:background="@drawable/background_edit_border"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/edit_height_add"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:hint="@string/altura"
                            android:paddingLeft="10sp"
                            android:paddingBottom="10sp"
                            android:paddingTop="10sp"
                            android:layout_marginRight="5sp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/greyDark"
                            android:textSize="16sp"
                            android:inputType="number"
                            android:digits="0123456789,"
                            android:maxLength="4"
                            android:singleLine="true"
                            android:imeOptions="actionNext"
                            android:background="@drawable/background_edit_border"
                            />

                        <EditText
                            android:id="@+id/edit_weight_add"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:hint="@string/peso"
                            android:paddingLeft="10sp"
                            android:paddingBottom="10sp"
                            android:paddingTop="10sp"
                            android:layout_marginLeft="5sp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/greyDark"
                            android:textSize="16sp"
                            android:inputType="number"
                            android:digits="0123456789,"
                            android:singleLine="true"
                            android:maxLength="4"
                            android:imeOptions="actionDone"
                            android:background="@drawable/background_edit_border"
                            />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/button_add_athlete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/adicionar"
                    android:background="@drawable/background_button_blue"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_progress_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_transparent"
        android:orientation="vertical"
        android:visibility="gone"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"></LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/progress_add_account"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:text="@string/add_account"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:id="@+id/text_progress_add"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"></LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"></LinearLayout>
    </LinearLayout>


</RelativeLayout>
