<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.john.combinebrasil.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_login"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:background="@drawable/logo_combine_small"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:orientation="vertical"
                        android:layout_gravity="bottom|center_vertical"
                        android:gravity="bottom|center_vertical"
                        android:paddingBottom="25dp">


                        <EditText
                            android:id="@+id/edit_login"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:textSize="18dp"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/User"
                            android:textColorHint="@color/greyDark"
                            android:paddingBottom="15dp"
                            android:paddingTop="15dp"
                            android:background="@drawable/background_edit"
                            android:maxLines="1"
                            android:singleLine="true"
                            />
                        <EditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textSize="18dp"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/Password"
                            android:textColorHint="@color/greyDark"
                            android:password="true"
                            android:paddingBottom="15dp"
                            android:paddingTop="15dp"
                            android:background="@drawable/background_edit"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            />
                        <Button
                            android:id="@+id/btn_entrar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:foregroundGravity="center_vertical|center_horizontal"
                            android:layout_gravity="center_vertical"
                            android:text="@string/Entrar"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/white"
                            android:textAllCaps="true"
                            android:textSize="18dp"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:background="@drawable/background_button_blue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_progress_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_transparent"
        android:orientation="vertical"
        android:visibility="gone"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"></LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:text="@string/logando"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:id="@+id/textView"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"></LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"></LinearLayout>
    </LinearLayout>

</RelativeLayout>
